--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="passo" id="passo-1">
             <p>O que vamos fazer la?</p>
-            <button class="btn-proximo" data-proximo="3">Ibiza</button>
-            <button class="btn-proximo" data-proximo="4">França</button>
+            <button class="btn-proximo" data-proximo="3">Aproveitar a cidade</button>
+            <button class="btn-proximo" data-proximo="4">Ir para festas la</button>
         </div>
         <div class="passo" id="passo-2">
             <p></p>
