--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         </div>
         <div class="passo" id="passo-2">
             <p></p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <button class="btn-proximo" data-proximo="5">Ver as igrejas</button>
+            <button class="btn-proximo" data-proximo="6">Ir em praias</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Em Ibiza tem muitos pontos turisticos, inclusive a praiaPlaya d'en Bossa: É a praia mais longa da ilha e um centro de atividades com bares, clubes e muita festa.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Ibiza</button>
         </div>
 
         <div class="passo" id="passo-4">
